블로그 생성 완료된 화면 캡처하여 작성

--- a/_posts/2022-06-04-Github 블로그 만들기.markdown
+++ b/_posts/2022-06-04-Github 블로그 만들기.markdown
@@ -66,3 +66,11 @@ git clone "레퍼지토리 복사한 주소"
 <br>
 ![텍스트](/assets/images/Github/%EC%A7%80%ED%82%AC%ED%85%8C%EB%A7%88%EC%A0%81%EC%9A%A9.png)
 * * *
+
+그렇게 완성한 나의 블로그이다. <br>
+이제 구조는 다 만들어졌으므로 템플릿 안 포스트 폴더에 블로그 글을 올리고 commit하면 자동으로 업데이트된다. <br>
+
+[완성된 블로그 접속하기](https://hwangyoonjae.github.io/ "완성된 블로그 접속하기")
+
+![텍스트](/assets/images/Github/%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%84%EC%84%B1.PNG)
+* * *
