깃허브 블로그 완성 제목 추가

--- a/_posts/2022-06-04-Github 블로그 만들기.markdown
+++ b/_posts/2022-06-04-Github 블로그 만들기.markdown
@@ -67,6 +67,7 @@ git clone "레퍼지토리 복사한 주소"
 ![텍스트](/assets/images/Github/%EC%A7%80%ED%82%AC%ED%85%8C%EB%A7%88%EC%A0%81%EC%9A%A9.png)
 * * *
 
+#### 4. 깃허브 블로그 완성
 그렇게 완성한 나의 블로그이다. <br>
 이제 구조는 다 만들어졌으므로 템플릿 안 포스트 폴더에 블로그 글을 올리고 commit하면 자동으로 업데이트된다. <br>
 
