--- a/_posts/2022-06-07-jekyll 로컬 서버 실행.markdown
+++ b/_posts/2022-06-07-jekyll 로컬 서버 실행.markdown
@@ -43,7 +43,7 @@ $ bundler update
 $ bundler install
 ```
 
-<span style="color:#FA5858">* ruby 호환성때문에 bundler 업데이트 한번 진행 후 설치하였습니다.</span>
+<span style="color:#FA5858; font-size:12px">* ruby 호환성때문에 bundler 업데이트 한번 진행 후 설치하였습니다.</span>
 
 * * *
 
