조치방법에서 필요한 라이브러리 클릭할 수 있도록 문구 수정

--- a/_posts/2022-06-07-jekyll 로컬 서버 실행.markdown
+++ b/_posts/2022-06-07-jekyll 로컬 서버 실행.markdown
@@ -61,7 +61,7 @@ $ bundle exec jekyll serve
 ![텍스트](/assets/images/local/jekyll%20%EC%84%9C%EB%B2%84%20%EC%8B%A4%ED%96%89%EC%95%88%EB%90%98%EB%8A%94%20%EA%B2%BD%EC%9A%B0.PNG)
 
 * 조치방법
-    + [필요한 라이브러리 다운받기 위해 사이트 이동한다.](https://curl.se/windows/ "라이브러리")
+    + [(클릭)필요한 라이브러리 다운받기 위해 사이트 이동한다.](https://curl.se/windows/ "라이브러리")
     + 본인 PC 사양에 맞춰 다운로드 진행한다.![텍스트](/assets/images/local/%EB%9D%BC%EC%9D%B4%EB%B8%8C%EB%9F%AC%EB%A6%AC%20%EB%8B%A4%EC%9A%B4%ED%81%B4%EB%A6%AD.PNG)
     + 압축 해제 후 **libcurl-x64.dll**을 **Ruby31-x64\bin**에 복사한다.
     + 파일명 **libcurl-x64.dll**에서 **libcurl.dll**로 변경한다.
