--- a/_posts/2022-06-07-jekyll 로컬 서버 실행.markdown
+++ b/_posts/2022-06-07-jekyll 로컬 서버 실행.markdown
@@ -67,6 +67,7 @@ $ bundle exec jekyll serve
     + 파일명 **libcurl-x64.dll**에서 **libcurl.dll**로 변경한다.
     + 서버 재실행한다.
 
+### 4. Window 로컬 실행 
 **http://127.0.0.1:4000/** 로 접속하면 완료!
 ![텍스트](/assets/images/local/jekyll%20%EB%A1%9C%EC%BB%AC%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
 
