--- a/_posts/2022-07-05-Vue 프로젝트 만들기.markdown
+++ b/_posts/2022-07-05-Vue 프로젝트 만들기.markdown
@@ -44,13 +44,12 @@ vue init webpack 프로젝트명
 ```javascript
 npm run dev
 ```
-서버가 정상적으로 실행될 경우 아래 문구를 확인할 수 있다.
-![텍스트](/assets/images/Vue/Vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%84%9C%EB%B2%84%20%EC%A3%BC%EC%86%8C.PNG)
-웹 브라우저에서 http://localhost:8080 로 이동하여 Vue 기본 화면을 확인할 수 있습니다.
-<br>
-프로그램 실행 시 아래 그림처럼 Vue 프로젝트 기본 화면이 나온다.
-<br>
+* 서버가 정상적으로 실행될 경우 아래 문구를 확인할 수 있다.
+ ![텍스트](/assets/images/Vue/Vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%84%9C%EB%B2%84%20%EC%A3%BC%EC%86%8C.PNG)
 
+ - 웹 브라우저에서 http://localhost:8080 로 이동하여 Vue 기본 화면을 확인할 수 있다.
+
+* 프로그램 실행 시 아래 그림처럼 Vue 프로젝트 기본 화면이 나온다.
 ![텍스트](/assets/images/Vue/Vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EA%B8%B0%EB%B3%B8%ED%99%94%EB%A9%B4.PNG)
 
 * * *
