--- a/_posts/2022-06-22-나만의 관리자페이지 만들기.markdown
+++ b/_posts/2022-06-22-나만의 관리자페이지 만들기.markdown
@@ -12,7 +12,7 @@ category: project
 author: johndoe
 ---
 
-![Screenshot](../assets/images/Project/%EB%A9%94%EC%9D%B8%ED%99%94%EB%A9%B4.PNG)
+[![Screenshot](../assets/images/Project/%EB%A9%94%EC%9D%B8%ED%99%94%EB%A9%B4.PNG)](../assets/images/Project/%EB%A9%94%EC%9D%B8%ED%99%94%EB%A9%B4.PNG)
 개발 공부를 위해서 무엇을 만들까 고민하다가 관리자페이지를 만들기로했다.
 <br>
 
