--- a/_posts/2022-06-22-나만의 관리자페이지 만들기.markdown
+++ b/_posts/2022-06-22-나만의 관리자페이지 만들기.markdown
@@ -2,7 +2,10 @@
 title: "나만의 관리자 페이지 만들기"
 layout: post
 date: 2022-06-22
-tag: jekyll
+tag: 
+- Vue
+- Spring Boot
+- 관리자 페이지
 image: https://sergiokopplin.github.io/indigo/assets/images/jekyll-logo-light-solid.png
 headerImage: false
 projects: true
