--- a/_posts/2022-06-04-Github 블로그 만들기.markdown
+++ b/_posts/2022-06-04-Github 블로그 만들기.markdown
@@ -3,7 +3,7 @@ title: "Github 블로그 만들기"
 layout: post
 date: 2022-06-04
 image: /assets/images/Post/start.png
-headerImage: false
+headerImage: true
 tag:
 - markdown
 - components
