--- a/_posts/2022-07-15-라이브러리 설치.markdown
+++ b/_posts/2022-07-15-라이브러리 설치.markdown
@@ -15,8 +15,22 @@ author: johndoe
 ---
 
 ## 라이브러기 설치하기:
-- Vue 개발을 위해 필요한 라이브러리와 플러그인을 설치하자
+- Vue 개발을 위해 필요한 라이브러리와 플러그인을 설치한다.
 
-### 1.
+### 1. vue element-ui(ui 컴포넌트) 설치 및 사용
+- Terminal에서 elementui 설치
+```javascript
+npm i element-ui -S
+```
+
+- main.js에 빨간 박스 내용 입력
+[![텍스트](../assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+7~8번줄은 ElementUI 관련 내용 추가하였고, 10번줄은 element ui 사용하겠다는 의미다.
+
+- element ui 적용
+[![텍스트](../assets/images/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)](../assets/images/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)
+
+- 실행화면 확인
+[![텍스트](../assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
 
 * * *
