--- a/_posts/2022-07-15-라이브러리 설치.markdown
+++ b/_posts/2022-07-15-라이브러리 설치.markdown
@@ -20,11 +20,12 @@ author: johndoe
 ### 1. vue element-ui(ui 컴포넌트) 설치 및 사용
 - Terminal에서 elementui 설치
 ```javascript
-npm i element-ui -S
+$ npm i element-ui -S
 ```
 
 - main.js에 빨간 박스 내용 입력
 [![텍스트](../assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+<br>
 7~8번줄은 ElementUI 관련 내용 추가하였고, 10번줄은 element ui 사용하겠다는 의미다.
 
 - element ui 적용
@@ -32,5 +33,23 @@ npm i element-ui -S
 
 - 실행화면 확인
 [![텍스트](../assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
+
+* * *
+
+### 2. Apache ECharts(차트 라이브러리) 설치 및 사용
+- Terminal에서 ECharts 설치
+```javascript
+$ npm install echarts
+$ npm install echarts vue-echarts
+===================================
+-- Vue2(2.7.0) 이상일 경우 설치 필요
+$ npm i -D @vue/composition-api
+```
+
+- main.js에 아래 내용 입력
+[![텍스트](../assets/images/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/images/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+
+- 실행화면 확인
+[![텍스트](../assets/images/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/images/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
 
 * * *
