Vue HTTP 통신 라이브러리 Axios란 제목에 블로그 내용 추가

--- a/_posts/2022-07-24-[Vue.js] - Vue HTTP 통신 라이브러리 Axios란.markdown
+++ b/_posts/2022-07-24-[Vue.js] - Vue HTTP 통신 라이브러리 Axios란.markdown
@@ -34,7 +34,7 @@ $ yarn add axios
 
 * * *
 
-## VUe에서 Axios 사용해보기:
+## Vue에서 Axios 사용해보기:
 <span style="color:#FA5858; font-size:12px">※ Main.js에 아래 내용을 추가한다.</span>
 ```javascript
 import Vue from 'vue'
