--- a/_posts/2022-07-15-라이브러리 설치.markdown
+++ b/_posts/2022-07-15-라이브러리 설치.markdown
@@ -64,3 +64,11 @@ $ npm install axios
 [![텍스트](../assets/images/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)](../assets/images/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)
 
 * * *
+
+### 4. v-calendar 설치 및 사용
+- Terminal에서 v-calendar 설치
+```javascript
+$ npm install v-calendar
+```
+
+***
