--- a/_posts/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.markdown
+++ b/_posts/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.markdown
@@ -5,28 +5,33 @@ date: 2022-08-01
 image: /assets/images/Post/Memory.png
 headerImage: true
 tag:
-- Vue
-- HTTP
-- Axios
-- 라이브러리
+- Linux
+- 메모리
+- 캐시
 category: blog
 author: hwangyoonjae
 description: Markdown summary with different options
 ---
 
-## 메모리의 캐싱 영역을 사용하는 이유
+## 리눅스 메모리 캐시 삭제를 알고 싶었던 계기 :
+- 엔지니어 일을 하면서 자사품이 설치된 서버를 정기적으로 점검을 하면서 메모리 확인을 하는데 **가끔 free 부분에 G가 아닌 M로 되어있는경우**들이 있어 서버 메모리 용량을 높이기 위해 캐시 삭제를 했다.
+  하지만 그냥 인터넷에 검색해서 지우기만 했지 왜 지워야하는지에 대해서는 알지도 못하고 있다가 고객사 담당자분께서 지운이유에 대해서 문의하셔서 이참에 블로그에 작성하는게 좋겠다 싶어 작성하였다.
+
+* * *
+
+## 메모리의 캐시 영역을 사용하는 이유 :
 - 디스크를 통해 파일을 읽고 쓸 때 속도가 느리기 때문에 메모리 캐싱 영역을 통해 보다 빠르게 파일을 읽고 쓸 수 있고,<br>
 시스템의 부하가 줄어들고 데이터 입출력 속도가 빠르기 때문이다.
 
 * * *
 
-## 버퍼와 캐시에 사용된 메모리를 지워야 하는 이유
+## 버퍼와 캐시에 사용된 메모리를 지워야 하는 이유 :
 - 일반적으로 캐시는 느린 장치의 데이터를 빠른 장치에 임시로 보관해두고 사용하여 성능을 올리는 것이 목적이다.
 - 메모리와 같은 빠른 장치는 공간이 한정되어 있기 때문에 모든 정보를 캐시할수 없기 때문에 캐시를 제거해야한다.
 
 * * *
 
-## 리눅스의 캐시와 메모리
+## 리눅스의 캐시와 메모리 :
 - 리눅스에서 free 명령어를 사용하다 보면 buffer/cache라는 것이 존재하고, <br>
 이 부분은 직접 사용하고 있는 메모리가 아닌 버퍼와 캐시에 사용된 메모리를 말한다.
 
@@ -47,7 +52,7 @@ description: Markdown summary with different options
 
 * * *
 
-## 캐시 관리하기
+## 캐시 관리하기 :
 
 ### 1.캐시 메모리 확인
 
