정적/동적 페이지 장/단점 작성

--- a/_posts/2022-08-08-[Web] - 정적페이지와 동적페이지.markdown
+++ b/_posts/2022-08-08-[Web] - 정적페이지와 동적페이지.markdown
@@ -29,6 +29,14 @@ description: Markdown summary with different options
 - 모든 사용자는 같은 결과의 웹 페이지를 서버에 요청하고 응답 받는다.
 <span style="color:#FA5858; font-size:12px">※ EX) : 홈페이지에 회사소개, 포트폴리오 등 내용이 변하지 않고 고정적인 페이지</span>
 
+### 정적페이지 장점 :
+- 요청에 대한 파일만 전송하면 되기 때문에 서버간 통신이 거의 없고 속도가 빠르다.
+- 백업, 복원이 쉽다.
+
+### 정적페이지 단점 :
+- 저장된 정보만 보여주기 때문에 서비스가 한정적이다.
+- 추가, 수정, 삭제 등의 작업을 서버에서 직접 다운받아 편집 후 업로드도 수정으로 해줘야 하기 때문에 관리자 힘들다.
+
 * * *
 
 ### 동적페이지란? :
@@ -36,5 +44,13 @@ description: Markdown summary with different options
 - 사용자는 상황, 시간, 요청 등에 따라 달라지는 웹 페이지를 보게된다.
 - 같은 페이지라도 사용자마다 다른 결과의 웹페이지를 서버에 요청하고 받을 수 있다.<br>
 <span style="color:#FA5858; font-size:12px">※ EX) : 네이버 블로그, 티스토리, 홈페이지 게시판 등</span>
+
+### 동적페이지 장점 :
+- 다양한 정보를 조합하여 웹 페이지를 제공 하기 때문에 서비스가 다양하다.
+- 웹 사이트 구조에 따라 추가, 수정, 삭제를 사용자측에서 가능하기 때문에 관리가 쉽다.
+
+### 동적페이지 단점 :
+- 사용자에게 웹 페이지를 전달하기 전에 처리하는 작업이 필요하기 때문에 상대적으로 느리다.
+- 백업, 복원이 상대적으로 어렵다.
 
 * * *
