Nginx에 대한 개념 작성

--- a/_posts/2022-08-10-[Web] - Nginx 설치하기.markdown
+++ b/_posts/2022-08-10-[Web] - Nginx 설치하기.markdown
@@ -13,7 +13,7 @@ description: Markdown summary with different options
 ---
 
 ## Nginx란? :
-- 
+- 클라이언트로부터 요청을 받았을 때 요청에 맞는 정적 파일을 응답해주는 HTTP Web Server로 활용되기도 하고, Reverse Proxy Server로 활용하여 WAS 서버의 부하를 줄일 수 있는 로드 밸런서로 활용되기도 한다.
 
 * * *
 
