각 블로그 게시글에 맞춰 태그 추가

--- a/_posts/2022-08-11-[DB] - Redis란.markdown
+++ b/_posts/2022-08-11-[DB] - Redis란.markdown
@@ -6,6 +6,7 @@ image: /assets/images/Post/redis.png
 headerImage: true
 tag:
 - DB
+- NoSQL
 category: blog
 author: hwangyoonjae
 description: Markdown summary with different options
