마크다운 테이블 사용법 작성

--- a/_posts/2022-08-18-[MarkDown] - 마크다운 사용법 .markdown
+++ b/_posts/2022-08-18-[MarkDown] - 마크다운 사용법 .markdown
@@ -104,3 +104,20 @@ Ex) [![텍스트](이미지URL)]( 링크URL )
 ![텍스트](/assets/images/mini_profile.png)
 
 * * *
+
+#### 테이블(Table)
+- 헤더와 셀을 구분할 때 3개 이상의 -(hyphen/dash) 기호가 필요하다.
+- 헤더 셀을 구분하면서 ':' 기호로 셀(열/칸) 안에 내용을 정렬할 수 있다.
+
+```
+# 테이블 생성
+
+헤더1|헤더2|헤더3|헤더4
+---|---|---|---
+셀1|셀2|셀3|셀4
+셀5|셀6|셀7|셀8
+셀9|셀10|셀11|셀12
+```
+![텍스트](/assets/images/Markdown/%ED%85%8C%EC%9D%B4%EB%B8%94%20%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+
+* * *
