--- a/_posts/2022-08-18-[MarkDown] - 마크다운 사용법 .markdown
+++ b/_posts/2022-08-18-[MarkDown] - 마크다운 사용법 .markdown
@@ -33,7 +33,7 @@ description: Markdown summary with different options
 
 ### 마크다운(MarkDown) 문법:
 #### 제목(Header)
-- #으로 시작하는 텍스트이다.
+- #으로 시작하는 텍스트다.
 ```
 # This is an H1
 ## This is an H2
@@ -61,7 +61,7 @@ description: Markdown summary with different options
 * * *
 
 #### 강조(Emphasis)
-- #으로 시작하는 텍스트이다.
+- #으로 시작하는 텍스트다.
 ```
 _This will also be italic_
  
@@ -76,7 +76,7 @@ _You **can** ~~combine~~ them_
 * * *
 
 #### 인용(Blockquotes)
-- '>'는 3개까지 가능합니다
+- '>'는 3개까지 가능하다.
 ```
 > I’ve always been more interested in the future than in the past.    
 > This is a first blockquote.
@@ -87,8 +87,30 @@ _You **can** ~~combine~~ them_
 
 * * *
 
+#### 목록(List)
+- '<ol>', '<ul>' 목록 태그로 변환된다.
+
+```
+1. 순서가 필요한 목록
+2. 순서가 필요한 목록
+  - 순서가 필요하지 않은 목록(서브) 
+  - 순서가 필요하지 않은 목록(서브) 
+1. 순서가 필요한 목록
+  1. 순서가 필요한 목록(서브)
+  1. 순서가 필요한 목록(서브)
+1. 순서가 필요한 목록
+
+- 순서가 필요하지 않은 목록에 사용 가능한 기호
+  - 대쉬(hyphen)
+  * 별표(asterisks)
+  + 더하기(plus sign)
+```
+![텍스트](/assets/images/Markdown/%EB%AA%A9%EB%A1%9D%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+
+* * *
+
 #### 이미지(Images)
-- 링크와 비슷하지만 앞에 !가 붙습니다.
+- 링크와 비슷하지만 앞에 !가 붙는다.
 - 이미지의 사이즈를 변경하기 위해서는 <img width="OOOpx" height="OOOpx"></img>와 같이 표현한다.
 
 ```
