Nginx 실행화면 이미지 클릭 시 확대하도록 수정

--- a/_posts/2022-08-10-[Web] - Nginx 설치하기.markdown
+++ b/_posts/2022-08-10-[Web] - Nginx 설치하기.markdown
@@ -84,6 +84,6 @@ $ systemctl enable nginx
 
 ### Nginx 실행화면 :
 - 위와 같은 방법 진행 후 실행하면 아래와 같은 화면이 나오면서 웹 페이지 정상 구동된다.
-![텍스트](/assets/images/Linux/Nginx%20%EC%84%B1%EA%B3%B5%ED%99%94%EB%A9%B4.PNG)
+[![텍스트](/assets/images/Linux/Nginx%20%EC%84%B1%EA%B3%B5%ED%99%94%EB%A9%B4.PNG)](/assets/images/Linux/Nginx%20%EC%84%B1%EA%B3%B5%ED%99%94%EB%A9%B4.PNG)
 
 * * *
