redis 설치명령어 주석처리하여 의미 작성

--- a/_posts/2022-09-01-[DB] - Redis 설치하기.markdown
+++ b/_posts/2022-09-01-[DB] - Redis 설치하기.markdown
@@ -15,7 +15,9 @@ description: Markdown summary with different options
 ## Redis 설치하기:
 ### Redis 패키지 설치하기:
 ```bash
+# epel(Extra Packages of Enterprise Linux)설치
 $ yum install epel-release yum-utils
+# redis 설치
 $ yum install redis
 ```
 
