--- a/_posts/2022-09-05-[Web] - Nginx 로드밸런싱 구현하기.markdown
+++ b/_posts/2022-09-05-[Web] - Nginx 로드밸런싱 구현하기.markdown
@@ -22,12 +22,18 @@ description: Markdown summary with different options
 #### Round Robin (라운드 로빈):
 - 서버의 가중치를 고려해, 실제 서버들을 처음부터 차례로 선택해 가며 모든 서버로 균등하게 분산 된다.<br>
 <span style="color:#FA5858; font-size:12px">※ 로드 밸런싱 메서드 입력 안하면 default 값이다.</span>
+- 장점 : 거의 균등하게 분산 가능하다.
+- 단점 : 경로가 보장 되지 않는다.
 
 #### Least-connected (최소 연결):
 - 서버의 가중치를 고려해, 활성 연결 수가 가장 적은 서버로 요청을 전송 한다.
+- 장점 : 거의 균등하게 분산 가능하다.
+- 단점 : 경로 보장 되지 않는다.
 
 #### Ip_hash:
 - 요청이 클라이언트 IP주소로 해싱하고, 한번 요청 받은 서버가 있을 때 해당 서버에만 요청을 분배한다.
+- 장점 : 경로 보장 가능하다.
+- 단점 : 균등한 분산이 어렵다.
 
 #### Least_time (최소 시간):
 - 연결 수가 가장 적으면서 평균 응답시간이 가장 적은 쪽을 선택해서 분배한다.
@@ -48,7 +54,8 @@ $ mkdir site-avaliable
 $ cd site-avaliable
 $ vi default.conf
 ```
-[![텍스트](/assets/images/Linux/nginx%20%EB%A1%9C%EB%93%9C%EB%B0%B8%EB%9F%B0%EC%8B%B1%20%EC%84%A4%EC%A0%95.PNG)](/assets/images/Linux/nginx%20%EB%A1%9C%EB%93%9C%EB%B0%B8%EB%9F%B0%EC%8B%B1%20%EC%84%A4%EC%A0%95.PNG)
+[![텍스트](/assets/images/Linux/nginx%20%EB%A1%9C%EB%93%9C%EB%B0%B8%EB%9F%B0%EC%8B%B1%20%EC%84%A4%EC%A0%95.PNG)](/assets/images/Linux/nginx%20%EB%A1%9C%EB%93%9C%EB%B0%B8%EB%9F%B0%EC%8B%B1%20%EC%84%A4%EC%A0%95.PNG)<br>
+<span style="color:#FA5858; font-size:12px">※ 위와 같이 <b>upstream</b>을 사용하여 nginx가 여러 서버에 분배할 수 있도록 설정한다.</span>
 
 * * *
 
