조인(Join)을 사용하는 이유 작성

--- a/_posts/2022-10-14-[DB] - Join이란.markdown
+++ b/_posts/2022-10-14-[DB] - Join이란.markdown
@@ -17,3 +17,7 @@ description: Markdown summary with different options
 
 * * *
 
+### 조인(Join)을 사용하는 이유:
+- 서로 관계있는 데이터가 여러 테이블로 나뉘어 저장되기 때문에 각 테이블에 저장된 데이터를 효과적으로 검색하기 위해서다.
+
+* * *
