--- a/_posts/2022-10-14-[DB] - Join이란.markdown
+++ b/_posts/2022-10-14-[DB] - Join이란.markdown
@@ -23,15 +23,16 @@ description: Markdown summary with different options
 * * *
 
 ## 조인(Join) 종류:
-### 이너 조인(INNER JOIN):
-- 이너 조인(INNER JOIN)은 두개의 테이블에서 공통된 요소들을 통해 결합하는 조인방식이다.
+### 내부 조인(INNER JOIN):
+- 내부 조인(INNER JOIN)은 두개의 테이블에서 공통된 요소들을 통해 결합하는 조인방식이다.
 [![텍스트](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
 - 두 테이블 모두에서 존재하는 값만 출력되기 때문에 NULL값이 없다.
-- INNER JOIN을 하는 코드는 아래와 같다.
+- 내부 조인(INNER JOIN)을 하는 코드와 쿼리결과에 대한 예시는 아래와 같다.
 ```sql
 SELECT COLUMN
 FROM A INNER JOIN B
-ON A.KEY = B.KEY
+ON A.DATA = B.DATA
 ```
+[![텍스트](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B2%B0%EA%B3%BC.PNG)
 
 * * *
