--- a/_posts/2022-10-14-[DB] - Join이란.markdown
+++ b/_posts/2022-10-14-[DB] - Join이란.markdown
@@ -30,9 +30,17 @@ description: Markdown summary with different options
 - 내부 조인(INNER JOIN)을 하는 코드와 쿼리결과에 대한 예시는 아래와 같다.
 ```sql
 SELECT COLUMN
-FROM A INNER JOIN B
+FROM A 
+INNER JOIN B
 ON A.DATA = B.DATA
 ```
 [![텍스트](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B2%B0%EA%B3%BC.PNG)
+
+* * *
+
+### 외부 조인(OUTER JOIN):
+### 왼쪽 외부 조인(LEFT OUTER JOIN):
+
+- OUTER JOIN을 하는 코드는 아래와 같다.
 
 * * *
