--- a/_posts/2022-10-14-[DB] - Join이란.markdown
+++ b/_posts/2022-10-14-[DB] - Join이란.markdown
@@ -25,22 +25,49 @@ description: Markdown summary with different options
 ## 조인(Join) 종류:
 ### 내부 조인(INNER JOIN):
 - 내부 조인(INNER JOIN)은 두개의 테이블에서 공통된 요소들을 통해 결합하는 조인방식이다.
-[![텍스트](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
+[![텍스트](/assets/images/DB/%EB%82%B4%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EB%82%B4%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
 - 두 테이블 모두에서 존재하는 값만 출력되기 때문에 NULL값이 없다.
 - 내부 조인(INNER JOIN)을 하는 코드와 쿼리결과에 대한 예시는 아래와 같다.
 ```sql
 SELECT COLUMN
 FROM A 
 INNER JOIN B
-ON A.DATA = B.DATA
+ON A.DATA = B.DATA;
 ```
 [![텍스트](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/images/DB/%EC%9D%B4%EB%84%88%EC%A1%B0%EC%9D%B8%20%EA%B2%B0%EA%B3%BC.PNG)
 
 * * *
 
 ### 외부 조인(OUTER JOIN):
-### 왼쪽 외부 조인(LEFT OUTER JOIN):
+- 외부 조인(OUTER JOIN)은 내부 조인한 결과에 더해서 일치하는 값이 없는 데이터도 가져오는 조인방식이다.
+[![텍스트](/assets/images/DB/%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
 
-- OUTER JOIN을 하는 코드는 아래와 같다.
+* * *
+
+### 왼쪽 외부 조인(LEFT OUTER JOIN):
+- 왼쪽 외부 조인(OUTER JOIN)은 왼쪽 테이블을 기준으로 결합하는 조인방식이다.
+[![텍스트](/assets/images/DB/%EC%99%BC%EC%AA%BD%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EC%99%BC%EC%AA%BD%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
+- 오른쪽 테이블에 일치하는 값이 없어도 왼쪽 테이블의 데이터는 모두 추출된다.
+- 왼쪽 외부 조인(OUTER JOIN)을 하는 코드는 아래와 같다.
+```sql
+SELECT COLUMN
+FROM A 
+LEFT OUTER JOIN B
+ON A.DATA = B.DATA;
+```
+
+* * *
+
+### 오른쪽 외부 조인(RIGHT OUTER JOIN):
+- 오른쪽 외부 조인(RIGHT OUTER JOIN)은 왼쪽 테이블을 기준으로 결합하는 조인방식이다.
+[![텍스트](/assets/images/DB/%EC%98%A4%EB%A5%B8%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EC%98%A4%EB%A5%B8%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
+- 왼쪽 테이블에 일치하는 값이 없어도 오른쪽 테이블의 데이터는 모두 추출된다.
+- 오른쪽 외부 조인(RIGHT OUTER JOIN)을 하는 코드는 아래와 같다.
+```sql
+SELECT COLUMN
+FROM A 
+RIGHT OUTER JOIN B
+ON A.DATA = B.DATA;
+```
 
 * * *
