--- a/_posts/2022-10-14-[DB] - Join이란.markdown
+++ b/_posts/2022-10-14-[DB] - Join이란.markdown
@@ -46,7 +46,7 @@ ON A.DATA = B.DATA;
 
 ### 왼쪽 외부 조인(LEFT OUTER JOIN):
 - 왼쪽 외부 조인(OUTER JOIN)은 왼쪽 테이블을 기준으로 결합하는 조인방식이다.
-[![텍스트](/assets/images/DB/%EC%99%BC%EC%AA%BD%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EC%99%BC%EC%AA%BD%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
+[![텍스트](/assets/images/DB/%EC%99%BC%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/images/DB/%EC%99%BC%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
 - 오른쪽 테이블에 일치하는 값이 없어도 왼쪽 테이블의 데이터는 모두 추출된다.
 - 왼쪽 외부 조인(OUTER JOIN)을 하는 코드는 아래와 같다.
 ```sql
