--- a/_posts/2022-12-06-[DB] - 서브쿼리란.markdown
+++ b/_posts/2022-12-06-[DB] - 서브쿼리란.markdown
@@ -14,3 +14,17 @@ description: Markdown summary with different options
 ## 서브쿼리란?:
 - 하나의 SQL 문에 포함되어 있는 또 다른 SQL문이다.
 - 가장 일반적으로는 WHERE절에서 사용하고, 위치에 따라 SELECT, FROM, WHERE절에서 사용한다.
+
+## SELECT절 서브쿼리:
+- 스칼라 서브쿼리 ( Scalar Subqueries )​ 라고 불리며, SELECT 절 안에 서브쿼리가 들어있다.
+```sql
+SELECT columnA,
+       (  SELECT B.column1
+            FROM tableB
+           WHERE tableB.ID = tableA.ID ) AS columnname
+  FROM tableA
+ WHERE tableAcolumn1 = 'name' ;
+```
+- SELECT절 서브쿼리는 데이터의 양이 많을수록 실행속도가 느려지기 때문에 거의 사용되지 않는 명령어이다.
+
+* * *
