--- a/_posts/2022-12-15-서버구축하기.markdown
+++ b/_posts/2022-12-15-서버구축하기.markdown
@@ -21,3 +21,11 @@ projects: true
 [![Screenshot](../assets/images/Project/%EC%84%9C%EB%B2%84%20%ED%9D%90%EB%A6%84%EB%8F%84.PNG)](../assets/images/Project/%EC%84%9C%EB%B2%84%20%ED%9D%90%EB%A6%84%EB%8F%84.PNG)
 
 * * *
+
+### 사용할 기술 스택 :
+- Docker
+- Nginx
+- Ansible
+- Jenkins
+- MariaDB
+- Linux CentOS 7.9
