태그랑 기술스택 추가 작성

--- a/_posts/2022-12-15-서버구축하기.markdown
+++ b/_posts/2022-12-15-서버구축하기.markdown
@@ -6,6 +6,7 @@ image: /assets/images/post/server.png
 headerImage: true
 tag: 
 - Docker
+- Nginx
 - Ansible
 - Jenkins
 - Redis
@@ -27,5 +28,6 @@ projects: true
 - Nginx
 - Ansible
 - Jenkins
+- Redis
 - MariaDB
 - Linux CentOS 7.9
