서버 구축하는 프로젝트에서 Docker Container로 어플리케이션 설치하는 방법 링크로 볼 수 있게 작성

--- a/_posts/2022-12-15-서버구축하기.markdown
+++ b/_posts/2022-12-15-서버구축하기.markdown
@@ -31,3 +31,11 @@ projects: true
 - Redis
 - MariaDB
 - Linux CentOS 7.9
+
+* * *
+
+### Docker Container Orchestration 환경 구현하기:
+- Docker Container로 어플리케이션을 설치한다.
+> * [Docker Container Orchestration 환경 구현하기](https://hwangyoonjae.github.io/Docker-Container-Orchestration-%ED%99%98%EA%B2%BD-%EA%B5%AC%ED%98%84%ED%95%98%EA%B8%B0/ "Docker Container Orchestration 환경 구현하기")
+
+* * *
