IAC 툴에서 나는 무엇을 알고있는지 작성

--- a/_posts/2023-01-26-[Infra] - IAC란.markdown
+++ b/_posts/2023-01-26-[Infra] - IAC란.markdown
@@ -24,6 +24,10 @@ description: Markdown summary with different options
   > * [Ansible이란?](https://hwangyoonjae.github.io/Ansible-Ansible%EB%9E%80/ "Ansible이란?")
 - Saltstack
 - Terraform
-- AWS CloudFormation 
+- AWS CloudFormation
+
+```html
+※ 필자는 IAC툴 중에서 Ansible만 알고있다.
+```
 
 * * *
