--- a/_posts/2023-01-26-[Infra] - IAC란.markdown
+++ b/_posts/2023-01-26-[Infra] - IAC란.markdown
@@ -31,3 +31,10 @@ description: Markdown summary with different options
 ```
 
 * * *
+
+## IAC 장점:
+- 자동화를 제공하여 비용절감
+- 스크립트를 실행하여 안전한 인프라를 간단하고 빠르게 구축하여 배포 속도 향상
+- 변경사항에 대하여 여러 번 적합한 구성을 지속적으로 배포하기에 오류 감소
+
+* * *
