IAC 특징 작성 및 IAC 툴은 맨 밑으로 내림

--- a/_posts/2023-01-26-[Infra] - IAC란.markdown
+++ b/_posts/2023-01-26-[Infra] - IAC란.markdown
@@ -16,6 +16,20 @@ description: Markdown summary with different options
 
 * * *
 
+## IAC 특징:
+- 모든 것을 코드로 정의한다.
+- 코드를 지속적으로 테스트하고 딜리버리한다.
+- 시스템을 작고 간단하게 빌드한다.
+
+* * *
+
+## IAC 장점:
+- 자동화를 제공하여 비용절감
+- 스크립트를 실행하여 안전한 인프라를 간단하고 빠르게 구축하여 배포 속도 향상
+- 변경사항에 대하여 여러 번 적합한 구성을 지속적으로 배포하기에 오류 감소
+
+* * *
+
 ## IAC 툴:
 - Chef
 - Puppet
@@ -29,12 +43,5 @@ description: Markdown summary with different options
 ```html
 ※ 필자는 IAC툴 중에서 Ansible만 알고있다.
 ```
-
-* * *
-
-## IAC 장점:
-- 자동화를 제공하여 비용절감
-- 스크립트를 실행하여 안전한 인프라를 간단하고 빠르게 구축하여 배포 속도 향상
-- 변경사항에 대하여 여러 번 적합한 구성을 지속적으로 배포하기에 오류 감소
 
 * * *
