--- a/_posts/2023-01-31-[TEST] - TDD란.markdown
+++ b/_posts/2023-01-31-[TEST] - TDD란.markdown
@@ -21,3 +21,14 @@ description: Markdown summary with different options
 - 반복 테스트를 이용한 소프트웨어 방법론으로, 작은 단위의 테스트 케이스를 작성하고 이를 통과하는 코드를 추가하는 단계를 반복하여 구현한다.
 
 * * *
+
+## TDD 개발주기:
+[![텍스트](/assets/images/TEST/TDD%20%EA%B0%9C%EB%B0%9C%EC%A3%BC%EA%B8%B0.PNG)](/assets/images/TEST/TDD%20%EA%B0%9C%EB%B0%9C%EC%A3%BC%EA%B8%B0.PNG)
+
+- 실패[RED] : 문제 정의 단계로, 실패하는 테스트 코드를 실제 코드보다 먼저 작성한다.
+- 성공[GREEN] : 문제 해결 단계로, 테스트를 성공할 수 있는 최소한의 실제코드를 작성한다.
+- 리팩토링[BLUE]: 불필요하고 비효율 적인 코드를 개선한다.
+
+#### **※ 위와 같은 방법으로 실제코드에 대해 기대되는 바를 보다 명확하게 정의함으로써 불필요한 설계를 피할 수 있고, 정확한 요구 사항에 집중 가능하다.**
+
+* * *
