제목문구 수정

--- a/_posts/2023-01-31-[TEST] - TDD란.markdown
+++ b/_posts/2023-01-31-[TEST] - TDD란.markdown
@@ -29,6 +29,6 @@ description: Markdown summary with different options
 - 성공[GREEN] : 문제 해결 단계로, 테스트를 성공할 수 있는 최소한의 실제코드를 작성한다.
 - 리팩토링[BLUE]: 불필요하고 비효율 적인 코드를 개선한다.
 
-#### **※ 위와 같은 방법으로 실제코드에 대해 기대되는 바를 보다 명확하게 정의함으로써 불필요한 설계를 피할 수 있고, 정확한 요구 사항에 집중 가능하다.**
+**※ 위와 같은 방법으로 실제코드에 대해 기대되는 바를 보다 명확하게 정의함으로써 불필요한 설계를 피할 수 있고, 정확한 요구 사항에 집중 가능하다.**
 
 * * *
