--- a/_posts/2023-01-31-[TEST] - TDD란.markdown
+++ b/_posts/2023-01-31-[TEST] - TDD란.markdown
@@ -12,7 +12,7 @@ description: Markdown summary with different options
 ---
 
 ## TDD를 알고싶었던 계기:
-- IAC를 공부하는 과정에서 우연히 TDD라는 단어를 보게되어 검색하였더니 내가 모르는거라 알고싶었다.
+- IAC를 공부하는 과정에서 우연히 TDD라는 단어를 보게되어 검색하였더니 개발소스 테스트 관련된 사항이라 알아야할 거 같아 작성하게되었다.
 
 * * *
 
