--- a/_posts/2023-01-31-[TEST] - TDD란.markdown
+++ b/_posts/2023-01-31-[TEST] - TDD란.markdown
@@ -32,3 +32,12 @@ description: Markdown summary with different options
 #### **※ 위와 같은 방법으로 실제코드에 대해 기대되는 바를 보다 명확하게 정의함으로써 불필요한 설계를 피할 수 있고, 정확한 요구 사항에 집중 가능하다.**
 
 * * *
+
+## TDD의 효과:
+- 디버깅 시간을 단출 할 수 있다.
+- 코드가 내손을 벗어나기 전에 가장 빠르게 피드백을 받을 수 있다.
+- 작성한 코드가 가지는 불안정성을 개선하여 생산성을 높일 수 있다.
+- 재설계 시간을 단축 할 수 있다.
+- 추가 구현이 용이하다.
+
+* * *
