TDD의 효과 상세하게 설명 작성

--- a/_posts/2023-01-31-[TEST] - TDD란.markdown
+++ b/_posts/2023-01-31-[TEST] - TDD란.markdown
@@ -35,9 +35,14 @@ description: Markdown summary with different options
 
 ## TDD의 효과:
 - 디버깅 시간을 단출 할 수 있다.
+  - 자동화 된 유닛테스팅을 전재하므로 특정 버그를 손쉽게 찾을 수 있다. 
 - 코드가 내손을 벗어나기 전에 가장 빠르게 피드백을 받을 수 있다.
+  - 기능 단위로 테스트를 진행하기 때문에 코드가 모두 완성되어 프로그래머의 손을 떠나기 전에 피드백을 받을 수 있다.
 - 작성한 코드가 가지는 불안정성을 개선하여 생산성을 높일 수 있다.
+  - 사용자에게 도달하기 전에 문제가 없는지 먼저 진단 받을 수 있다.
 - 재설계 시간을 단축 할 수 있다.
+  - 개발자가 지금 무엇을 해야하는지 분명히 정의하고 개발을 시작하게 되고, 테스트 시나리오를 작성하면서 다양한 예외사항에 대해 생각해볼 수 있다.
 - 추가 구현이 용이하다.
+  - 자동화된 유닛 테스팅을 전제하므로 테스트 기간을 획기적으로 단축시킬 수 있다.
 
 * * *
