리다이렉션 기호 작성과 /dev/null, 2>&1 기능 작성

--- a/_posts/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.markdown
+++ b/_posts/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.markdown
@@ -22,3 +22,28 @@ description: Markdown summary with different options
 - 방향을 변경하는 것을 의미하며, 파일로 표준 입력을 받고, 파일로 표준 출력을 받는 등의 기능을 의미한다.
 
 * * *
+
+|리다이렉션 기호|방향|의미|
+|---|---|---|
+|>|표준 출력|명령 > 파일 : 명령의 결과를 파일로 저장|
+|>>|표준 출력|명령 >> 파일 : 명령의 결과를 기존 파일 데이터에 추가|
+|<|표준 입력|명령 < 파일 : 파일의 데이터를 명령에 입력|
+
+* * *
+
+## /dev/null 이해하기:
+- 리눅스에서 쓰레기통과 같다.
+- 데이터를 죄다 없앤다.
+```bash
+$ /script.sh > /dev/null
+```
+
+* * *
+
+## 2>&1 이해하기:
+- 출력 결과와 함께 에러 내용도 없앤다.
+```bash
+$ /script.sh > /dev/null 2>&1
+```
+
+* * *
