--- a/_posts/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.markdown
+++ b/_posts/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.markdown
@@ -31,6 +31,52 @@ description: Markdown summary with different options
 
 * * *
 
+## 파일 디스크립터:
+- 표준 입력과 표준 출력 그리고 표준 에러를 쉘이나 시스템 프로그래밍에서는 숫자로도 표현할 수 있는거다.
+
+|파일디스크립터|이름|용도|표준장치|
+|---|---|---|---|
+|0|stdin|명령어에 입력될 내용을 저장|키보드|
+|1|stdout|명령어에서 출력될 내용을 저장|화면|
+|2|stderr|명령어에서 출력될 에러메시지를 저장|화면|
+
+- 리다이렉션 꺾쇠 기호와 파일디스크립터 일련번호 그리고 & 와 ! 를 이용하여 다양한 리다이렉션 조합이 가능하다.
+
+```bash
+# 명령이 실행된 표준 출력의 결과와 에러를 파일로 출력
+$ 명령 >& 파일명
+ 
+# 명령이 실행된 표준 출력의 결과와 에러를 파일로 덧붙여 출력
+$ 명령 >>& 파일명
+ 
+# 파일의 존재 유무와 상관없이 생성하고 명령이 실행된 표준 출력의 결과를 파일로 출력
+$ 명령 >! 파일명 
+
+# 파일의 존재 유무와 상관없이 생성하고 파일에 덧붙여 출력
+$ 명령 >>! 파일명 
+
+# 파일의 존재 유무와 상관없이 생성하고 명령이 실행된 표준 출력의 결과와 에러를 파일로 출력
+$ 명령 >&! 파일명 
+ 
+# 파일의 존재 유무와 상관없이 생성하고 명령이 실행된 표준 출력의 결과와 에러를 파일에 덧붙여 출력
+$ 명령 >>&! 파일명
+```
+
+```bash
+# 일련번호 1쓰나 안쓰나 어쨋든 출력을 의미하기에 '명령 > 파일명' 와 같다. 
+$ 명령 1> 파일명
+ 
+# 만일 명령을 실행하다 에러가 나면, 에러를 화면에 출력하지 말고 파일에 기록하도록 재지정
+$ 명령 2> err.txt
+ 
+# 오류가 나면 에러내용을 계속 파일에 덧붙여 추가한다.
+$ 명령 2>> err.txt 
+
+# 표준에러를 표준출력 동작으로 재지정 하라는 뜻
+$ 명령 2>&1 파일명
+```
+* * *
+
 ## /dev/null 이해하기:
 - 리눅스에서 쓰레기통과 같다.
 - 데이터를 죄다 없앤다.
