제목부분에 인덱스 -> 인덱스(Index)로 수정

--- a/_posts/2023-02-12-[DB] - 인덱스란.markdown
+++ b/_posts/2023-02-12-[DB] - 인덱스란.markdown
@@ -24,7 +24,7 @@ description: Markdown summary with different options
 
 * * *
 
-## 인덱스를 사용하는 이유:
+## 인덱스(Index)를 사용하는 이유:
 - **인덱스의 가장 큰 특징은 데이터들이 정렬이 되어있어서다.**
 
 ### 조건 검색 WHERE 절의 효율성
