저장 프로시저(Stored Procedure) 장점/단점 작성

--- a/_posts/2023-02-15-[DB] - 저장 프로시저란.markdown
+++ b/_posts/2023-02-15-[DB] - 저장 프로시저란.markdown
@@ -19,5 +19,27 @@ description: Markdown summary with different options
 
 ## 저장 프로시저(Stored Procedure)란?:
 - DB 내부에 저장된 일련의 SQL 명령문들을 하나의 함수처럼 실행하기 위한 쿼리의 집합이다.
+- 간단하게로는 SELECT, INSERT, UPDATE, DELETE 등의 DQL, DML을 사용할 수 있으며, 조금 더 나아가서 IF 문이나 DECLARE, SET 등의 프로그래밍 문법을 사용할 수도 있다
+
+* * *
+
+## 저장 프로시저(Stored Procedure) 장점:
+### 보안성 향상
+- 프로시저 단위로 실행 권한을 부여할 수 있기 때문에, 기본적인 보안 사고에 대처가 유연한 편이다.
+
+### 네트워크 소요 시간 절감
+- 쿼리를 다중으로 실행하는 경우, 한번의 호출을 통해 다중의 쿼리가 실행되기 때문에 네트워크에 대한 부담과 소요 시간을 줄일 수 있다.
+
+### 운영 배포 용이성
+- 별도의 WAS 서버 재기동 없이 SP 수정으로 조회, 수정, 추가 등의 가벼운 소스 변경 등이 가능하여, 긴급 배포 등이 용이하다.
+
+* * *
+
+## 저장 프로시저(Stored Procedure) 단점:
+### 낮은 처리 성능
+- 프로시저의 경우 성능이나 최적화가 부족하여 수행 능력이 떨어지며, 특히 문자열이나 숫자 연산에 사용하면 JAVA, C 등에 비해서 효율이 좋지 않다.
+
+### 디버깅 및 유지보수의 어려움
+- 배포, 버전 관리 등에 대한 이력 관리가 힘들고, 쿼리 수정된 경우 현재 운영 중인 서비스에 영향도 분석이 어렵다.
 
 * * *
