--- a/_posts/2023-02-22-[알고리즘] - sha256이란.markdown
+++ b/_posts/2023-02-22-[알고리즘] - sha256이란.markdown
@@ -1,11 +1,11 @@
 ---
-title: "[암호화] - sha256 암호화란"
+title: "[알고리즘] - sha256이란"
 layout: post
 date: 2023-02-22
 image: /assets/images/Post/encryption.png
 headerImage: true
 tag:
-- 암호화
+- 알고리즘
 category: blog
 author: hwangyoonjae
 description: Markdown summary with different options
