--- a/_posts/2023-02-22-[인코딩] - 인코딩이란.markdown
+++ b/_posts/2023-02-22-[인코딩] - 인코딩이란.markdown
@@ -12,7 +12,7 @@ description: Markdown summary with different options
 ---
 
 ## 인코딩이란?:
-- 정보의 형태나 형식을 표준화, 보안, 처리 속도 향상, 저장 공간 절약 등을 위해서 다른 형태나 형식으로 변환하는 처리 혹은 그 처리 방식을 말한다.
+- 어떠한 정보/데이터의 형태나 형식을 다른 형태나 형식으로 변환하는 것을 말한다.
 
 * * *
 
@@ -20,6 +20,7 @@ description: Markdown summary with different options
 - Binary Data를 Text로 바꾸는 Encoding의 하나로써 Binary Data를 Character set에 영향을 받지 않는 공통 ASCII 영역의 문자로만 이루어진 문자열로 바꾸는 Encoding이다.
 
 
-### Binary Data란?:
+#### Binary Data란?:
 - 이진 데이터, 이진수(0,1)로 표시한 데이터이다.
+
 * * *
