디코딩 개념 작성

--- a/_posts/2023-02-22-[인코딩&디코딩] - 인코딩&디코딩이란.markdown
+++ b/_posts/2023-02-22-[인코딩&디코딩] - 인코딩&디코딩이란.markdown
@@ -17,7 +17,7 @@ description: Markdown summary with different options
 * * *
 
 ## 인코딩이란?:
-- 어떠한 정보/데이터의 형태나 형식을 다른 형태나 형식으로 변환하는 것을 말한다.
+- 사람이 인지할 수 있는 문자(언어)를 약속된 규칙에 따라 컴퓨터가 이해하는 언어 (0과1)로 이루어진 코드로 바꾸는 것을 말한다.
 
 * * *
 
@@ -27,5 +27,16 @@ description: Markdown summary with different options
 
 #### Binary Data란?:
 - 이진 데이터, 이진수(0,1)로 표시한 데이터이다.
+
+* * *
+
+## 디코딩이란?:
+- 컴퓨터가 이해하는 언어 (0과1)로 이루어진 코드를 약속된 규칙에 따라 사람이 인지할 수 있는 문자(언어)로 바꾸는 것을 말한다.
+
+* * *
+
+### 바이트(byte) 컴퓨터 기본 저장단위:
+- 1바이트(1byte)는 8bit이다.
+- 1바이트에는 2의 8승, 즉 256개의 값을 저장할수 있다.
 
 * * *
