--- a/_posts/2023-02-28-[알고리즘] - sha256이란.markdown
+++ b/_posts/2023-02-28-[알고리즘] - sha256이란.markdown
@@ -34,3 +34,9 @@ description: Markdown summary with different options
 - 단방향 암호화 방식이기 때문에 복호화가 불가능 하다는 것이 큰 특징이다.
 
 * * *
+
+### sha256과정:
+1. 전처리 : 문자열을 패딩하고 작은 블록으로 나누고 초기 값을 설정한다.
+2. 해시계산 : 여러 연산을 이용하여 256비트의 해시값을 계산한다.
+
+* * *
